--- a/package.json
+++ b/package.json
@@ -13,7 +13,19 @@
     "lint": "echo Linting the code ⌛ && eslint ./**/*.js --fix && echo \"✅ Code linted, ready to commit!\"",
     "docs": "jsdoc -d docs -c jsdoc.config.json"
   },
-  "precommit": "format",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.+(js|ts|tsx)": [
+      "npm run lint"
+    ],
+    "**/*.+(js|ts|json)": [
+      "npm run format"
+    ]
+  },
   "keywords": [],
   "author": "Valentin Lutchanka",
   "license": "ISC",
@@ -32,8 +44,8 @@
     "eslint-plugin-playwright": "0.16.0",
     "eslint-plugin-prettier": "5.0.0",
     "fast-csv": "4.3.6",
-    "pre-commit": "1.2.2",
     "prettier": "3.0.3",
+    "husky": "4.3.8",
     "rimraf": "3.0.0"
   }
 }
